[package]
name = "cumheim-mod-pack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copy_dir = "0.1.3"
eframe = "0.27.2"
serde = "1.0.198"
serde_derive = "1.0.198"
serde_json = "1.0.116"
tempfile = "3.10.1"
ureq = { version = "*", features = [ "json" ] }
walkdir = "2.5.0"
zip = "0.6.6"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Storage_FileSystem",
]
